--- a/commons-bio/build.gradle
+++ b/commons-bio/build.gradle
@@ -18,6 +18,7 @@ dependencies {
     runtime "org.junit.jupiter:junit-jupiter-engine:$junitVersion"
     runtime "org.junit.platform:junit-platform-console:$junitPlatformVersion"
 
+    testCompile 'org.assertj:assertj-core:3.11.0'
     testCompile "org.junit.jupiter:junit-jupiter-api:$junitVersion"
     testCompile "org.junit.jupiter:junit-jupiter-params:$junitVersion"
 }
