--- a/commons-bio/build.gradle
+++ b/commons-bio/build.gradle
@@ -11,7 +11,7 @@ apply plugin: 'kotlin'
 dependencies {
     compile project(":commons-util")
 
-    compile("org.jetbrains.kotlin:kotlin-stdlib-jdk8:${kotlinVersion}")
+    compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8:${kotlinVersion}"
 
     // Junit dependencies
     runtime "org.junit.jupiter:junit-jupiter-engine:$junitVersion"
