--- a/commons-bio/build.gradle
+++ b/commons-bio/build.gradle
@@ -1,21 +1,15 @@
-buildscript {
-    ext {
-        junitVersion = "5.2.0"
-        junitPlatformVersion = "1.2.0"
-        kotlinVersion = '1.3.10'
-    }
+plugins {
+    id("org.jetbrains.kotlin.jvm")
 }
-
-apply plugin: 'kotlin'
 
 dependencies {
     compile project(":commons-util")
 
     // Junit dependencies
-    runtime "org.junit.jupiter:junit-jupiter-engine:$junitVersion"
-    runtime "org.junit.platform:junit-platform-console:$junitPlatformVersion"
+    runtime("org.junit.jupiter:junit-jupiter-engine:$junitVersion")
+    runtime("org.junit.platform:junit-platform-console:$junitPlatformVersion")
 
-    testCompile 'org.assertj:assertj-core:3.11.0'
-    testCompile "org.junit.jupiter:junit-jupiter-api:$junitVersion"
-    testCompile "org.junit.jupiter:junit-jupiter-params:$junitVersion"
+    testCompile("org.assertj:assertj-core:3.11.0")
+    testCompile("org.junit.jupiter:junit-jupiter-api:$junitVersion")
+    testCompile("org.junit.jupiter:junit-jupiter-params:$junitVersion")
 }
