--- a/bio-admin/build.gradle
+++ b/bio-admin/build.gradle
@@ -1,3 +1,4 @@
+import static Dependencies.KotlinStdLib
 import static SpringBootDependencies.SpringBootStartedAdmin
 import static SpringBootDependencies.SpringBootStarterWeb
 
@@ -9,8 +10,8 @@ plugins {
 
 dependencies {
     compile(SpringBootStarterWeb)
-    compile(SpringBootStartedAdmin)
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
+    implementation(SpringBootStartedAdmin)
+    implementation(KotlinStdLib)
 }
 
 bootJar {
