--- a/bio-admin/build.gradle
+++ b/bio-admin/build.gradle
@@ -1,6 +1,5 @@
 import static Dependencies.KotlinStdLib
-import static SpringBootDependencies.SpringBootStartedAdmin
-import static SpringBootDependencies.SpringBootStarterWeb
+import static SpringBootDependencies.*
 
 plugins {
     id "org.jetbrains.kotlin.plugin.spring" version "1.3.20"
@@ -14,7 +13,7 @@ configurations {
 
 dependencies {
     compile(SpringBootStarterWeb)
-    compile("org.springframework.boot:spring-boot-starter-jetty")
+    compile(SpringBootStartedJetty)
     implementation(SpringBootStartedAdmin)
     implementation(KotlinStdLib)
 }
