--- a/ci/bio-commandline.yml
+++ b/ci/bio-commandline.yml
@@ -1,12 +1,17 @@
 .deploy-dev-bio-commandline:
   dependencies:
     - build-test
-  script: gradle deployBioCommandLine -Penv=dev -PdeployPath=/nfs/biostudies/.adm/apps/cli/dev
+  script: gradle deployBioCommandLine -Penv=dev -PdeployPath=cli/dev
 
 .deploy-beta-bio-commandline:
   dependencies:
     - build-test
   script: gradle deployBioCommandLine -Penv=beta -PdeployPath=cli/beta
+
+.deploy-prod-bio-commandline:
+  dependencies:
+    - build-test
+  script: gradle deployBioCommandLine -Penv=prod -PdeployPath=cli/prod
 
 auto-deploy-dev-bio-commandline:
   extends: .deploy-dev-bio-commandline
@@ -22,6 +27,13 @@ auto-deploy-beta-bio-commandline:
     refs:
       - beta
 
+auto-deploy-prod-bio-commandline:
+  extends: .deploy-prod-bio-commandline
+  stage: auto-deploy-prod-bio-commandline
+  only:
+    refs:
+      - prod
+
 deploy-dev-bio-commandline:
   extends: .deploy-dev-bio-commandline
   stage: deploy-dev-bio-commandline
@@ -33,8 +45,6 @@ deploy-beta-bio-commandline:
   when: manual
 
 deploy-prod-bio-commandline:
+  extends: .deploy-prod-bio-commandline
   stage: deploy-prod-bio-commandline
   when: manual
-  dependencies:
-    - build-test
-  script: gradle deployBioCommandLine -Penv=prod -PdeployPath=/nfs/biostudies/.adm/apps/cli/prod
