--- a/ci/bio-admin.yml
+++ b/ci/bio-admin.yml
@@ -3,4 +3,4 @@ deploy-bio-admin:
   when: manual
   dependencies:
     - build-test
-  script: gradle deployBioAdmin -Penv=prod -PdeployPath=/nfs/biostudies/.adm/apps/bio-admin
+  script: gradle deployBioAdmin -Penv=prod -PdeployPath=bio-admin
